<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>NewProject</groupId>
  <artifactId>NewProject</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <dependencies>
           <dependency>
      		  <groupId>org.seleniumhq.selenium</groupId>
        	  <artifactId>selenium-java</artifactId>
        	  <version>3.141.59</version>
    	   </dependency> 
	    	<dependency>
	  				<groupId>org.testng</groupId>
	  				<artifactId>testng</artifactId>
	  				<version>6.14.2</version>
	  				<scope>test</scope>
	  		</dependency>
	    	<dependency>
	  				<groupId>org.apache.poi</groupId>
	  				<artifactId>poi</artifactId>
	  				<version>3.17</version>
	  		</dependency>
	  	  <dependency>
             <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>3.17</version>
     	  </dependency>
	    <dependency>
    <groupId>org.javassist</groupId>
    <artifactId>javassist</artifactId>
    <version>3.23.1-GA</version>
</dependency>
	    
	    <dependency>
    <groupId>cglib</groupId>
    <artifactId>cglib-nodep</artifactId>
    <version>3.2.7</version>
</dependency>
	    <dependency>
    <groupId>javax.annotation</groupId>
    <artifactId>javax.annotation-api</artifactId>
    <version>1.3.2</version>
</dependency>
<dependency>
    <groupId>javax.xml.bind</groupId>
    <artifactId>jaxb-api</artifactId>
    <version>2.4.0-b180725.0427</version>
</dependency>

	    	    
        </dependencies>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
          <configuration>
              	<source>11</source>
                <target>11</target>
           </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.pluglins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.0</version>
         <configuration>
        <argLine>
            --illegal-access=permit
        </argLine>
    </configuration>
        </plugin>
        <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-failsafe-plugin</artifactId>
    <version>2.22.0</version>
    <configuration>
        <argLine>
            --illegal-access=permit
        </argLine>
    </configuration>
</plugin>
    </plugins>
  </build>
</project>